--- a/client/style.css
+++ b/client/style.css
@@ -24,6 +24,14 @@ li {
 	list-style-type: none;
 }
 
+legend {
+	text-wrap: pretty;
+	max-width: 85%;
+	padding: 0.25rem 0.5rem;
+	background-color: #dfe9fb;
+	border-radius: 0.5rem;
+}
+
 .form-header {
 	text-align: center;
 }
@@ -47,7 +55,7 @@ li {
 	margin-top: 1.5rem;
 	padding: 1rem;
 	gap: 1.5rem;
-	max-width: 90vw;
+	max-width: 40rem;
 	min-width: 260px;
 }
 
@@ -57,6 +65,7 @@ li {
 
 #sign-in fieldset {
 	border-radius: .5rem;
+	margin-top: 0.25rem;
 }
 
 .center-horizontal {
