--- a/client/style.css
+++ b/client/style.css
@@ -53,7 +53,7 @@ legend {
 	justify-content: center;
 	align-items: center;
 	margin-top: 1.5rem;
-	padding: 1rem;
+	padding: 1.5rem;
 	gap: 1.5rem;
 	max-width: 40rem;
 	min-width: 260px;
@@ -64,7 +64,8 @@ legend {
 }
 
 #sign-in fieldset {
-	border-radius: .5rem;
+	border: 2px solid #bebebd;
+	border-radius: 0.5rem;
 	margin-top: 0.25rem;
 }
 
