--- a/client/style.css
+++ b/client/style.css
@@ -1,175 +1,180 @@
-@import url("./reset.css");
+@import url('./reset.css');
 
 body {
-	font-family: Arial, Helvetica, sans-serif;
-	display: flex;
-	flex-direction: column;
-	justify-content: start;
-	align-items: center;
-	width: 100vw;
-	height: 100vh;
-	background: rgb(218, 167, 233);
-	background: linear-gradient(90deg, rgba(218, 167, 233, 1) 0%, rgba(242, 114, 190, 1) 39%, rgba(255, 134, 103, 1) 100%);
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background: rgb(218, 167, 233);
+  background: linear-gradient(
+    90deg,
+    rgba(218, 167, 233, 1) 0%,
+    rgba(242, 114, 190, 1) 39%,
+    rgba(255, 134, 103, 1) 100%
+  );
 }
 
 .main {
-	padding: 1rem;
+  padding: 1rem;
 }
 
 ul {
-	padding: 0;
+  padding: 0;
 }
 
 li {
-	list-style-type: none;
+  list-style-type: none;
 }
 
 legend {
-	text-wrap: pretty;
-	max-width: 85%;
-	padding: 0.25rem 0.5rem;
-	background-color: #dfe9fb;
-	border-radius: 0.5rem;
+  text-wrap: pretty;
+  max-width: 85%;
+  padding: 0.25rem 0.5rem;
+  background-color: #dfe9fb;
+  border-radius: 0.5rem;
 }
 
 .form-header {
-	text-align: center;
+  text-align: center;
 }
 
 .shadow {
-	box-shadow: 0 0.5rem 0.5rem 0.25rem hsla(0, 0%, 10%, 0.05);
+  box-shadow: 0 0.5rem 0.5rem 0.25rem hsla(0, 0%, 10%, 0.05);
 }
 
 .white-container {
-	background-color: white;
-	border-radius: 1rem;
-	padding: 1rem;
-	border: 1px solid #a8a8a8;
+  background-color: white;
+  border-radius: 1rem;
+  padding: 1rem;
+  border: 1px solid #a8a8a8;
 }
 
 #sign-in {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	margin-top: 1.5rem;
-	padding: 1.5rem;
-	gap: 1.5rem;
-	max-width: 40rem;
-	min-width: 280px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 1.5rem;
+  padding: 1.5rem;
+  gap: 1.5rem;
+  max-width: 40rem;
+  min-width: 280px;
 }
 
 #sign-in section {
-	width: 100%;
+  width: 100%;
 }
 
 #sign-in fieldset {
-	border: 2px solid #bebebd;
-	border-radius: 0.5rem;
-	margin-top: 0.25rem;
-	padding: 0.75rem;
+  border: 2px solid #bebebd;
+  border-radius: 0.5rem;
+  margin-top: 0.25rem;
+  padding: 0.75rem;
 }
 
 .center-horizontal {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .center-vertical {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .required {
-	font-weight: bold;
-	color: #d60000;
+  font-weight: bold;
+  color: #d60000;
 }
 
 .name-fields {
-	display: flex;
-	justify-content: space-between;
-	width: 100%;
-	gap: 1rem;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  gap: 1rem;
 }
 
 .label-above {
-	width: 100%;
+  width: 100%;
 }
 
 .label-above label {
-	width: 100%;
+  width: 100%;
 }
 
 .label-above label input {
-	width: 100%;
+  width: 100%;
 }
 
 .label-above label div {
-	text-wrap: nowrap;
+  text-wrap: nowrap;
 }
 
 .check-multiple::after {
-	content: " (check all that apply)";
+  content: ' (check all that apply)';
 }
 
 .checkbox {
-	display: grid;
-	align-items: center;
-	grid-template-columns: 1rem auto;
-	gap: 0.5rem;
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1rem auto;
+  gap: 0.5rem;
 }
 
-input[type="checkbox"] {
-	appearance: none;
-	background-color: #fff;
-	margin: 0;
-	width: 1.15rem;
-	height: 1.15rem;
-	border: 0.15rem solid black;
-	border-radius: 0.15rem;
-	display: grid;
-	place-content: center;
+input[type='checkbox'] {
+  appearance: none;
+  background-color: #fff;
+  margin: 0;
+  width: 1.15rem;
+  height: 1.15rem;
+  border: 0.15rem solid black;
+  border-radius: 0.15rem;
+  display: grid;
+  place-content: center;
 }
 
-input[type="checkbox"]::before {
-	content: "";
-	width: 0.65rem;
-	height: 0.65rem;
-	transform: scale(0);
-	color: #81d185;
-	background-color: #308535;
-	transition: 80ms transform ease-in-out;
-	transform-origin: bottom left;
-	clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-	z-index: 10;
+input[type='checkbox']::before {
+  content: '';
+  width: 0.65rem;
+  height: 0.65rem;
+  transform: scale(0);
+  color: #81d185;
+  background-color: #308535;
+  transition: 80ms transform ease-in-out;
+  transform-origin: bottom left;
+  clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+  z-index: 10;
 }
 
-input[type="checkbox"]:checked::before {
-	transform: scale(1);
-	display: block;
+input[type='checkbox']:checked::before {
+  transform: scale(1);
+  display: block;
 }
 
-input[type="text"] {
-	border: 2px solid #222222;
-	border-radius: 0.25rem;
-	display: grid;
-	place-content: center;
+input[type='text'] {
+  border: 2px solid #222222;
+  border-radius: 0.25rem;
+  display: grid;
+  place-content: center;
 }
 
-input[type="text"]:focus-visible {
-	outline: none;
-	border-color: #0070ff;
+input[type='text']:focus-visible {
+  outline: none;
+  border-color: #0070ff;
 }
 
 #submit-btn {
-	padding: 1rem;
-	border-radius: 0.5rem;
-	border: none;
-	background-color: cornflowerblue;
-	color: white;
-	font-weight: bold;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  background-color: cornflowerblue;
+  color: white;
+  font-weight: bold;
 }
 
 /* TODO: mobile first, responsive design */
@@ -177,6 +182,8 @@ input[type="text"]:focus-visible {
 /* 	medium: 768x1024 to 1366x768 */
 /* 	large: 1440x1024 */
 
-@media only screen and (min-width: 576px) {}
+@media only screen and (min-width: 576px) {
+}
 
-@media only screen and (min-width: 992px) {}
+@media only screen and (min-width: 992px) {
+}
