--- a/client/style.css
+++ b/client/style.css
@@ -99,6 +99,13 @@ legend {
   gap: 1rem;
 }
 
+.personal-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.5rem;
+}
+
 .label-above {
   width: 100%;
 }
@@ -161,6 +168,7 @@ input[type='text'] {
   border-radius: 0.25rem;
   display: grid;
   place-content: center;
+  padding: 0.25rem 0.5rem;
 }
 
 input[type='text']:focus-visible {
