--- a/client/style.css
+++ b/client/style.css
@@ -61,6 +61,12 @@ button:hover {
   border: 0.15rem solid red !important;
 }
 
+ul.invalid-field-warning {
+  box-shadow: 0 0 0.3rem 0.1rem rgba(255, 0, 0, 0.8);
+  border-style: none !important;
+  border-radius: 0.25rem;
+}
+
 #sign-in {
   display: flex;
   flex-direction: column;
