feat: tweaks to improve accessibility and SEO scores (lighthouse analytics)

--- a/client/style.css
+++ b/client/style.css
@@ -216,7 +216,7 @@ input[required] {
   padding: 1rem;
   border-radius: 0.5rem;
   border: none;
-  background-color: cornflowerblue;
+  background-color: #1f66e5;
   color: white;
   font-weight: bold;
 }
