--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,10 @@
 @import url('./reset.css');
 
+:root {
+  --font-size: 1.1rem;
+  font-size: var(--font-size);
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
@@ -87,7 +92,7 @@ ul.invalid-field-warning {
 }
 
 #sign-in fieldset {
-  border: 2px solid #bebebd;
+  border: 0.125rem solid #bebebd;
   border-radius: 0.5rem;
   margin-top: 0.25rem;
   padding: 0.5rem 0.75rem;
@@ -148,8 +153,26 @@ ul.invalid-field-warning {
 .checkbox {
   display: grid;
   align-items: start;
-  grid-template-columns: 1rem auto;
+  grid-template-columns: 1.2rem auto;
   gap: 0.5rem;
+}
+
+.modal-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#modal-close-btn {
+  font-size: 2.5rem;
+  border: none;
+  background-color: transparent;
+  color: black;
+  height: 2rem;
+  line-height: 1.25rem;
+  align-self: flex-start;
+  padding: 0;
 }
 
 input[type='checkbox'] {
