--- a/client/css/style.css
+++ b/client/css/style.css
@@ -236,7 +236,7 @@ input[type='checkbox']:checked::before {
 }
 
 input[type='text'],
-input[type='tel'] {
+input[type='email'] {
   border: 0.15rem solid #222222;
   border-radius: 0.25rem;
   display: grid;
@@ -245,7 +245,7 @@ input[type='tel'] {
 }
 
 input[type='text']:focus-visible,
-input[type='tel']:focus-visible {
+input[type='email']:focus-visible {
   outline: none;
   border-color: #0070ff;
 }
