feat: label optional fields instead of required fields, update validation methods to include email and newsletter

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -258,6 +258,13 @@ a {
   text-decoration: none;
 }
 
+.optional::after {
+  content: ' – Optional';
+  font-weight: lighter;
+  color: gray;
+  font-style: italic;
+}
+
 .button {
   display: grid;
   place-items: center;
